# omni-packager

./: README.md  requirements.txt  setup.cfg
etc/: conf.yaml  openEuler.repo  toolchain_x86.json
omnipackager/: packager.py  utils.py
