[metadata]
name = omnipackager
version = 0.1
summary = Package Build Service of the Omni Build Platform
description_file =
    README.md
author = Zhenyu Zheng
author_email = zheng.zhenyu@outlook.com
python_requires = >=3.8
url = https://github.com/omnibuildplatform/omni-packager
classifiers =
    Development Status :: 3 - Alpha
    Environment :: OmniBuildPlatform
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Mulan PSL v2
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
data_files =
    etc/omni-packager = etc/*

packages =
    omnipackager

[entry_points]
console_scripts =
    omni-packager = omnipackager.packager:main
